testsuite/poke.pkl/char-diag-1.pk
/* { dg-do compile } */

var foo = '\129'; /* { dg-error "" } */
